# Solian-Gtk

./: Cargo.toml  README.md  build.rs
resources/: gresource.xml
resources/widgets/: account_row.ui  chat_bubble.ui  post_card.ui
src/: main.rs
src/core/: config.rs  mod.rs
src/core/models/: mod.rs
src/core/network/: client.rs  mod.rs  websocket.rs
src/core/services/: auth.rs  chat.rs  checkin.rs  extra.rs  mod.rs  notification.rs  oauth.rs  posts.rs  publisher.rs  realm.rs  sticker.rs  storage.rs
src/resources/: app-config.json
src/ui/: application.rs  mod.rs
src/ui/pages/: chat.rs  checkin.rs  compose.rs  dashboard.rs  extras.rs  fitness.rs  friends.rs  login.rs  mod.rs  notifications.rs  posts.rs  profile.rs  realms.rs  search.rs  settings.rs  thoughts.rs  timeline.rs  wallets.rs
