[package]
name = "solian_gtk"
version = "0.1.0"
edition = "2021"
description = "Solar Network GTK4 Desktop Application"
authors = ["Solar Network Team"]
license = "AGPL-3.0"

[dependencies]
# GTK4 - use explicit re-export for proper module resolution
gtk = { version = "0.11", package = "gtk4" }
adw = { package = "libadwaita", version = "0.9" }
gdk4 = "0.11"
pango = "0.22"

# Async runtime
tokio = { version = "1", features = ["full"] }
bytes = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# WebSocket
tokio-tungstenite = "0.26"
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# State management
glib = "0.19"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
url = "2"
thiserror = "2"
anyhow = "1"
once_cell = "1"
parking_lot = "0.12"

# Crypto
ring = "0.17"
sha2 = "0.10"
base64ct = "1"

# Local storage
directories = "5"

[features]
default = ["custom_protocol"]
custom_protocol = []
